# opengl-tutorial

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  configure.sh  run.sh  vcpkg.json
assets/shaders/: ball.frag  light.frag  light.vert  light_all.frag  point_light.frag  spot_light.frag  tutorial.frag  tutorial.vert  white.frag  white.vert
src/: main.cpp
src/ngn/: ngn.h
src/ngn/rendering/: camera.cpp  camera.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex.h
src/ngn/utils/: log.h
